--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -8,7 +8,10 @@
 @import "components/Tabs";
 @import "components/Footer";
 @import "components/Carousel";
-:root  {
+@import "components/Pricing";
+@import "components/PeriodSelector";
+@import "components/PlanCard";
+:root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -24,7 +27,7 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: white;
+  background-color: #fcfcfc;
   overflow-x: hidden;
 }
 .container {
